--- a/package.json
+++ b/package.json
@@ -10,4 +10,38 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.21.1",
+    "d3-format": "^3.0.1",
+    "d3-time-format": "^4.0.0",
+    "nivo": "^0.31.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-financial-charts": "^1.3.1",
+    "react-loading-skeleton": "^2.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrom
