--- a/package.json
+++ b/package.json
@@ -44,4 +44,19 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrom
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/d3-format": "^3.0.1",
+    "@types/d3-time-format": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1"
+  }
+}
